# TigorEngineWeb

./: .gitignore  CMakeLists.txt  Makefile  build.bat
includes/: GUIManager.h  GUIWidgets.h  TigorGUI.h  default_font.h  e_audioObject.h  e_camera.h  e_math.h  e_math_variables.h  e_memory.h  e_texture.h  e_texture_variables.h  e_tools.h  e_transform.h  e_vertex.h  e_window.h  engine.h  engine_includes.h  gameObject.h  gameObject2D.h  gameObject3D.h  graphicsItems.h  graphicsObject.h  input_manager.h  intersections2D.h  key_defines.h  lib_yandex.h  manager_includes.h  primitive_object.h  shape_object.h  sprite_object.h  std_intersect.h  web_defines.h  window_manager.h
libs/: lib_yandex.js  miniaudio.h
src/: GUIManager.c  GUIWidgets.c  TigorGUI.c  e_audioObject.c  e_camera.c  e_math.c  e_memory.c  e_texture.c  e_tools.c  e_transform.c  engine.c  gameObject.c  gameObject2D.c  gameObject3D.c  graphicsObject.c  input_manager.c  intersections2D.c  main.c  primitive_object.c  shape_object.c  sprite_object.c  web_init.c  web_window.c  window_manager.c
